--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
 <button id="play-again" hidden>Play again</button>
-
+<h2 hidden>Game over! Want to play again?! Just click refresh. 🧑‍🚀!</h2>
 <script>
   // Initialization
   const boxes = Array.from(document.querySelectorAll("td"));
